argo-apps-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: argo-apps
spec: {}
status: {}
