nginx-argo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-argo
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: anyuid
      serviceAccount: anyuid
      containers:
        - name: nginx
          image:  quay.io/atwatanmalikm/simple-webapp:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
